fix align items and dark button

--- a/contributors/index.css
+++ b/contributors/index.css
@@ -36,7 +36,7 @@ h3 {
 
 #author {
   padding: 2%;
-  min-height: 55vh;
+  min-height: 50vh;
   max-height: 55vh;
 }
 #wrap {
@@ -55,3 +55,10 @@ h3 {
   height: 100%;
  
 }
+@media only screen and (max-width:756px){
+   .img-responsive{ 
+     width:50%;
+     height: 50%;
+     margin-top:2rem;
+    }
+  }
